[update]sql拼接租户与schema限制

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
