--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Project exclude paths
 /target/
-/src/main/resources/application.yml
-/src/main/resources/bootstrap.yml
 /src/test/
+/.idea/
+/.git/
+/.git/
